Fixed the overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ body {
     font-size: 16px;
     margin: 0;
     padding:0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .porfolioImage{
